--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,6 @@ jobs:
 
     - name: Build
       run: |
-        go build -o main ./main
+        go build -o main ./main.go
     - name: Test
       run: go test -v ./...
